# PlaySK-Midi-PianoRoll-Image-Converter

./: .gitignore  3rd-party-license.txt  LICENSE.md  README.md  build_mac.sh  build_mac.spec  build_win.bat  build_win.spec  pyproject.toml
.github/workflows/: release.yml
src/: Midi2Image.java  Midi2Image.py  config.py  const.py  converter_ampico.py  converter_ampico_a.py  converter_base.py  converter_duoart_organ.py  custom_widgets.py  main.py  main_ui.py  midi_to_image.py  roll_viewer.py  update_checker.py  version.py  version_info.txt  welcome_message.py
src/assets/: config.json  dmg-bg.tiff
src/playsk_midi_to_roll_image_converter_assets/: Aeolian 176-note config.json  Ampico B config.json  config.json
src/tracker_bars/: ampico.py  base.py  duoart_organ.py
