[project]
name = "PlaySK-Midi-PianoRoll-Image-Converter"
version = "1.1.0"
description = "Convert Midi file to Piano Roll Image"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "certifi>=2025.6.15",
    "ctkmessagebox>=2.7",
    "customtkinter>=5.2.2",
    "mido>=1.3.3",
    "pillow>=11.2.1",
    "pydantic>=2.11.7",
    "tkinterdnd2>=0.4.3",
]

[dependency-groups]
dev = [
    "pyinstaller==6.1.0",
    "pip-licenses>=4.3.3,<5",
]

[tool.uv]
package = false